--- a/public/index.html
+++ b/public/index.html
@@ -413,7 +413,7 @@ function moveBluePoint( clickX, clickY ) {
 	//socket.emit('updatePlayers'); // Emitir un nuevo evento al servidor
 
 	if (!isMoving) { 
-	console.log('/////MOVE PLAYER//////')
+	console.log('/////Move Player//////')
   	isMoving = true  
 	drawUserCount();
 
@@ -914,7 +914,7 @@ return topPlayersx;
 
 	let greenCircles = [];
 
-function generateGreenCircles2() {
+function generateGreenCircles() {
 	            console.log('GENERATE GREEN CIRCLES 1.');
 
     const svg = document.querySelector('svg');
@@ -958,7 +958,7 @@ console.log(`Valor de I: ${i}:`);
 }
 
 
-	function generateGreenCircles() {
+	function generateGreenCircles2() {
     const svg = document.querySelector('svg');
     const hexagons = document.querySelectorAll('#hexagonGroup polygon');
 
