--- a/public/index.html
+++ b/public/index.html
@@ -914,7 +914,7 @@ return topPlayersx;
 
 	let greenCircles = [];
 
-function generateGreenCircles() {
+function generateGreenCircles3() {
 	            console.log('GENERATE GREEN CIRCLES 1.');
 
     const svg = document.querySelector('svg');
@@ -958,7 +958,7 @@ console.log(`Valor de I: ${i}:`);
 }
 
 
-	function generateGreenCircles2() {
+	function generateGreenCircles() {
     const svg = document.querySelector('svg');
     const hexagons = document.querySelectorAll('#hexagonGroup polygon');
 
@@ -982,6 +982,8 @@ console.log(`Valor de I: ${i}:`);
 
         // Almacena las coordenadas y el índice de cada círculo verde
         greenCircles.push({ x, y, index: i });
+	    console.log(`Valor de I: ${i}:`);
+
     }
 
  //   socket.emit('greenCirclesGenerated', greenCircles);
