--- a/public/index.html
+++ b/public/index.html
@@ -914,7 +914,7 @@ return topPlayersx;
 
 	let greenCircles = [];
 
-function generateGreenCircles3() {
+function generateGreenCircles() {
 	            console.log('GENERATE GREEN CIRCLES 1.');
 
     const svg = document.querySelector('svg');
@@ -922,10 +922,9 @@ function generateGreenCircles3() {
 
     // Borra los círculos verdes existentes
     document.querySelectorAll('circle[fill="green"]').forEach(circle => {
-        circle.parentNode.removeChild(circle);
+        //circle.parentNode.removeChild(circle);
     });
 
-		console.log(`LENGTH: ${greenCircles.length}:`);
 let i = 0;
 
     // Dibuja los círculos verdes en las coordenadas recibidas del servidor
@@ -950,7 +949,8 @@ i+=1;
 
 
 
-console.log(`Valor de I: ${i}:`);
+console.log(`Valor de I: ${i}:${x}:${y}`);
+		console.log(`LENGTH: ${greenCircles.length}:`);
 
     });
 
@@ -958,7 +958,7 @@ console.log(`Valor de I: ${i}:`);
 }
 
 
-	function generateGreenCircles() {
+	function generateGreenCircles3() {
     const svg = document.querySelector('svg');
     const hexagons = document.querySelectorAll('#hexagonGroup polygon');
 
