--- a/public/index.html
+++ b/public/index.html
@@ -930,7 +930,7 @@ let i = 0;
     // Dibuja los círculos verdes en las coordenadas recibidas del servidor
 
 
-//   greenCircles = [];
+  greenCircles = [];
     greenCircles.forEach(({ x, y }) => {
 //console.log(`${x}: ${y}:`);
 
@@ -993,7 +993,7 @@ socket.on('greenCirclesGenerated', (circles) => {
 	            console.log('GREEN CIRCLES GENERATED 2.');
 
    // greenCircles.length = 0;
-    greenCircles.push(...circles);
+   // greenCircles.push(...circles);
 	console.log(`LENGTH2: ${greenCircles.length}:`);
 
     generateGreenCircles();
