--- a/public/index.html
+++ b/public/index.html
@@ -993,7 +993,7 @@ socket.on('greenCirclesGenerated', (circles) => {
 	            console.log('GREEN CIRCLES GENERATED 2.');
 
    // greenCircles.length = 0;
-   // greenCircles.push(...circles);
+    greenCircles.push(...circles);
 	console.log(`LENGTH2: ${greenCircles.length}:`);
 
     generateGreenCircles();
