--- a/public/index.html
+++ b/public/index.html
@@ -984,7 +984,8 @@ console.log(`Valor de I: ${i}:${x}:${y}`);
 socket.on('greenCirclesGenerated', (circles) => {
 	            console.log('GREEN CIRCLES GENERATED 2.');
 
-   greenCircles.length = 0;
+	greenCircles = [];
+   //greenCircles.length = 0;
     greenCircles.push(...circles);
 	console.log(`LENGTH2: ${greenCircles.length}:`);
 
