--- a/public/index.html
+++ b/public/index.html
@@ -985,6 +985,7 @@ socket.on('greenCirclesGenerated', (circles) => {
 	            console.log('GREEN CIRCLES GENERATED 2.');
 
 	greenCircles = [];
+	greenCircles2 = [];
    //greenCircles.length = 0;
     greenCircles.push(...circles);
 	console.log(`LENGTH2: ${greenCircles.length}:`);
