--- a/public/index.html
+++ b/public/index.html
@@ -923,7 +923,7 @@ function generateGreenCircles() {
 
     // Borra los círculos verdes existentes
     document.querySelectorAll('circle[fill="green"]').forEach(circle => {
-        //circle.parentNode.removeChild(circle);
+        circle.parentNode.removeChild(circle);
     });
 
 let i = 0;
