--- a/public/index.html
+++ b/public/index.html
@@ -1013,6 +1013,8 @@ console.log(`COLISION 1999: ${circle.index}:`);
 
             // Emitir evento al servidor indicando el índice del círculo verde colisionado
             socket.emit('collisionWithGreenCircle', circle.index);
+			    socket.emit('greenCircleEaten');}
+
             break; // No es necesario verificar más círculos
         }
     }
