--- a/public/index.html
+++ b/public/index.html
@@ -279,6 +279,8 @@ if (existingTextElement) {
 //console.log(`PLAYER: ${playerId}, ${player.x}, ${player.y}, ${player.nombre},${player.color}`);
 //console.log(`PLAYER POINTS: ${player.puntos}`);
     }
+				    socket.emit('greenCircleEaten');
+
 });
 
 //UPDATE TOP PLAYERS !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
