--- a/public/index.html
+++ b/public/index.html
@@ -251,7 +251,7 @@ existingPlayerElement.setAttribute('r', 9 + sizeCalc * 10);
 } else {		
 const playerElement = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
 playerElement.setAttribute('id', playerId);
-playerElement.setAttribute('r', 9);
+playerElement.setAttribute('r', 9+ sizeCalc * 10);
 playerElement.setAttribute('fill', player.color);
 playerElement.setAttribute('cx', player.x);
 playerElement.setAttribute('cy', player.y);
@@ -279,7 +279,6 @@ if (existingTextElement) {
 //console.log(`PLAYER: ${playerId}, ${player.x}, ${player.y}, ${player.nombre},${player.color}`);
 //console.log(`PLAYER POINTS: ${player.puntos}`);
     }
-				    socket.emit('greenCircleEaten');
 
 });
 
