Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -809,7 +809,7 @@ greenCircle.setAttribute('fill', 'red');
         coordinates.push({ x, y });
 	
 //greenCircle.style.animation = 'circleAnimationWithDuration 2s ease-in-out infinite alternate';
-svg.appendChild(greenCircle);
+//svg.appendChild(greenCircle);
 
 	   anime({
           targets: greenCircle,
