--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,16 @@ display: none; }
     <label for="playerName">Introduce tu nombre:</label>
     <input type="text" id="playerName" name="playerName" required>
     <button type="button" id="submitButton">Aceptar</button>
+
+	<div id="cameraOptions">
+        <label>
+            <input type="radio" name="camera" value="1"> Opción 1
+        </label>
+        <label>
+            <input type="radio" name="camera" value="2"> Opción 2
+        </label>
+    </div>
+	
 </form>
 
 <canvas id="gameCanvas" height="0" style="background-color: #ff0000;"></canvas>
