--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,10 @@ display: none; }
 
      		</div>
 
+	    <g id="camera">
+
+
+
 <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 
 	<text id="textLine1" x="10" y="20" fill="red">
@@ -129,6 +133,10 @@ display: none; }
   </text>
 
 </svg>
+
+		    	</g>
+
+
 
 <div id="mainContainer">
 
