--- a/public/index.html
+++ b/public/index.html
@@ -241,15 +241,15 @@ const camera = document.getElementById('camera');
 
 	camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
 
-let antesX = bluePoint.getAttribute('cx');
-let antesY = bluePoint.getAttribute('cy');
-let desX = bluePoint.getAttribute('cx');
-let desY = bluePoint.getAttribute('cy');
+//let antesX = bluePoint.getAttribute('cx');
+//let antesY = bluePoint.getAttribute('cy');
+//let desX = bluePoint.getAttribute('cx');
+//let desY = bluePoint.getAttribute('cy');
 	let nuevoX = 0;
 let nuevoY = 0;        
 
-	bluePoint.setAttribute('cx', initialBluePointX);
-	bluePoint.setAttribute('cy', initialBluePointY);
+	//bluePoint.setAttribute('cx', initialBluePointX);
+	//bluePoint.setAttribute('cy', initialBluePointY);
 
 
 
