--- a/public/index.html
+++ b/public/index.html
@@ -240,6 +240,11 @@ let currentCameraY4 = 0;
 const camera = document.getElementById('camera');
 
 	camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
+	const initialCameraX = 0;
+const initialCameraY = 0;
+
+	
+	camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
 
 //let antesX = bluePoint.getAttribute('cx');
 //let antesY = bluePoint.getAttribute('cy');
