--- a/public/index.html
+++ b/public/index.html
@@ -240,8 +240,8 @@ let currentCameraY4 = 0;
 const camera = document.getElementById('camera');
 
 	camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
-	const initialCameraX = 0;
-const initialCameraY = 0;
+	 initialCameraX = 0;
+ initialCameraY = 0;
 
 	
 	camera.setAttribute('transform', `translate(${initialCameraX}, ${initialCameraY})`);
