--- a/public/index.html
+++ b/public/index.html
@@ -224,8 +224,8 @@ const initialBluePointY = 100;
 const svgWidth = document.documentElement.clientWidth;
 const svgHeight = document.documentElement.clientHeight;
 
-const initialCameraX = svgWidth / 2 - initialBluePointX;
-const initialCameraY = svgHeight / 2 - initialBluePointY;
+let initialCameraX = svgWidth / 2 - initialBluePointX;
+let initialCameraY = svgHeight / 2 - initialBluePointY;
 
 let currentCameraX3 = 0;
 let currentCameraY3 = 0;
