--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@ display: none; }
 
 
 
-<svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
+<g id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 
 	<text id="textLine1" x="10" y="20" fill="red">
   </text>
@@ -132,7 +132,7 @@ display: none; }
   <text id="textLine5" x="10" y="100" fill="purple">
   </text>
 
-</svg>
+</g>
 
 		    	</g>
 
