--- a/public/index.html
+++ b/public/index.html
@@ -708,7 +708,9 @@ function findClosestVertices(x, y) {
         redDot.setAttribute('cy', y1);
         redDot.setAttribute('r', '3');
         redDot.setAttribute('fill', 'red');
-	svg.appendChild(redDot);
+		const cameraGroup = document.getElementById('camera'); cameraGroup.appendChild(redDot);
+
+//	svg.appendChild(redDot);
 	// Mostramos las coordenadas en la consola
         //console.log(`Vértice (${x1}, ${y1}) marcado con círculo rojo.`);
         }
