--- a/public/index.html
+++ b/public/index.html
@@ -115,10 +115,7 @@ display: none; }
 
      		</div>
 
-	    <g id="camera">
-
-
-
+	  <!--  <g id="camera">
 <g id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 
 	<text id="textLine1" x="10" y="20" fill="red">
@@ -134,7 +131,16 @@ display: none; }
 
 </g>
 
-		    	</g>
+		    	</g> -->
+
+ <g id="camera">
+  <!-- Grupo de hexágonos -->
+  <g id="hexagonGroup"></g>
+  <!-- Líneas de trayectoria -->
+  <g id="trajectoryLines"></g>
+  <!-- Punto azul -->
+  <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
+	</g>	
 
 
 
