--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,17 @@ display: none; }
 
 		    	</g> -->
 
+	<text id="textLine1" x="10" y="20" fill="red">
+  </text>
+  <text id="textLine2" x="10" y="40" fill="blue">
+  </text>
+  <text id="textLine3" x="10" y="60" fill="green">
+  </text>
+  <text id="textLine4" x="10" y="80" fill="orange">
+  </text>
+  <text id="textLine5" x="10" y="100" fill="purple">
+  </text>
+
  <g id="camera">
   <!-- Grupo de hexágonos -->
   <g id="hexagonGroup"></g>
