--- a/public/index.html
+++ b/public/index.html
@@ -236,6 +236,9 @@ document.getElementById('submitButton').addEventListener('click', function () {
     [ { direction: 'SW' }, { direction: 'SE' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' }, { direction: 'ES' }, { direction: 'E' } ],
     // Repite el patrón de filas según sea necesario para tener 20 filas en total
 ];
+createHexagons();
+
+	
 	const initialBluePointX = 100;
 const initialBluePointY = 100;
 const svgWidth = document.documentElement.clientWidth;
@@ -522,7 +525,7 @@ function animateNameLocally(circleElement, start, end) {
 }
 
 //CREATE HEXAGON PANAL
-createHexagons();
+//createHexagons();
 
 //MOVE BLUE POINT !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 //////////////////////////////////////////////////////////////////////	
